# zecwallet-lite-nu6

./: package-lock.json
native/: Cargo.toml
src/: rpc.ts
src/components/: LoadingScreen.tsx  Send.tsx  ServerSelectModal.tsx  Sidebar.tsx
src/utils/: utils.ts
