[package]
name = "zecwallet-lite"
version = "0.1.0"
edition = "2018"
authors = ["Zecwallet"]
license = "MIT/Apache-2.0"

[lib]
crate-type = ["cdylib"]


[dependencies.neon]
version = "0.8"
default-features = false
features = ["napi-6"]

[dependencies]
zecwalletlitelib = { git = "https://github.com/james-katz/zecwallet-light-cli" }
#zecwalletlitelib = { path = "../../zecwallet-light-cli/lib" }
lazy_static = "1.4.0"


[patch.crates-io]
zcash_address = { git = "https://github.com/james-katz/librustzcash-zwl", rev = "68d08b3dca56f81d87f355f1670ddfc5b54a72b2" }
zcash_primitives = { git = "https://github.com/james-katz/librustzcash-zwl", rev = "68d08b3dca56f81d87f355f1670ddfc5b54a72b2" }
zcash_client_backend = { git = "https://github.com/james-katz/librustzcash-zwl", rev = "68d08b3dca56f81d87f355f1670ddfc5b54a72b2" }
zcash_note_encryption = { git = "https://github.com/james-katz/librustzcash-zwl", rev = "68d08b3dca56f81d87f355f1670ddfc5b54a72b2" }
zcash_encoding = { git = "https://github.com/james-katz/librustzcash-zwl", rev = "68d08b3dca56f81d87f355f1670ddfc5b54a72b2" }
zcash_proofs = { git = "https://github.com/james-katz/librustzcash-zwl", rev = "68d08b3dca56f81d87f355f1670ddfc5b54a72b2" }
orchard = { git = "https://github.com/adityapk00/orchard", rev = "0a960a380f4e9c3472c9260f3df61cd5e50d51b0" }

#zcash_address = { path = "../../librustzcash/components/zcash_address/" }
#zcash_primitives = { path = "../../librustzcash/zcash_primitives/" }
#zcash_client_backend = { path = "../../librustzcash/zcash_client_backend" }
#zcash_note_encryption = { path = "../../librustzcash/components/zcash_note_encryption" }
#zcash_encoding = { path = "../../librustzcash/components/zcash_encoding/" }
#zcash_proofs = { path = "../../librustzcash/zcash_proofs/" }
